# siren-song-fw

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
src/: main.rs
