[package]
name = "siren-song-fw"
version = "0.1.0"
authors = ["oddlama <oddlama@oddlama.org>"]
edition = "2021"

description = "❄️ 🦀 A template for embedded rust development for the nRF52840 with embassy featuring reproducible builds with nix"
documentation = "https://github.com/oddlama/nrf-template"
homepage = "https://github.com/oddlama/nrf-template"
readme = "README.md"
repository = "https://github.com/oddlama/nrf-template"
keywords = ["nrf52840", "embassy"]
categories = ["embedded", "no-std", "hardware-support", "embedded-hal"]
license = "MIT OR Apache-2.0"

[dependencies]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "17851c7ed0b7ef0081e46b31bd30e6169fa3a611", features = [ "defmt" ] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "17851c7ed0b7ef0081e46b31bd30e6169fa3a611", features = [ "defmt", ] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "17851c7ed0b7ef0081e46b31bd30e6169fa3a611", features = [ "defmt", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers", "task-arena-size-16384" ] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "17851c7ed0b7ef0081e46b31bd30e6169fa3a611", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "17851c7ed0b7ef0081e46b31bd30e6169fa3a611", features = [ "defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time" ] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "17851c7ed0b7ef0081e46b31bd30e6169fa3a611", features = [ "defmt", "usbd-hid" ] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "17851c7ed0b7ef0081e46b31bd30e6169fa3a611", features = [ "defmt" ] }

# Embedded core-level crates
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.1"
usbd-hid = "0.6.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
